Make a class constructor to make the containers and content as well as migrate temporary html content to full javascript in home page

--- a/src/template.html
+++ b/src/template.html
@@ -8,39 +8,12 @@
 <body>
     <header>
         <nav>
-            <button>Home</button>
-            <button>Menu</button>
-            <button>About</button>
+            <button id="home">Home</button>
+            <button id="menu">Menu</button>
+            <button id="about">About</button>
         </nav>
     </header>
     <div id="content">
-        <div class="brand-container home">
-            <h1>Cluck Chef</h1>
-            <p class="tagline">“Where Every Bite Rules the Roost!”</p>
-        </div>
-        <div class="product-container home">
-            <h2>Best Selling Product</h2>
-            <img src="./friend_chicken.jpg" alt="Picture of fried chicken in a plate">
-            <p>Crispy Chef Chicken</p>
-        </div>
-        <div class="hours-container home">
-            <h2>Open Hours</h2>
-            <p>Monday	10:30 AM – 9:00 PM</p>
-            <p>Tuesday	10:30 AM – 9:00 PM</p>
-            <p>Wednesday	10:30 AM – 9:00 PM</p>
-            <p>Thursday	10:30 AM – 9:30 PM</p>
-            <p>Friday	10:30 AM – 10:30 PM</p>
-            <p>Saturday	9:00 AM – 10:30 PM</p>
-            <p>Sunday	9:00 AM – 8:00 PM</p>
-        </div>
-        <div class="location-container home">
-            <h2>Location</h2>
-            <p>Cluck Dynasty
-            1288 Rooster Row
-            Nashville, Tennessee 37201</p>
-            <p>Located just off Broadway, across from Music Row Plaza — right in the heart of Nashville’s food and music scene.
-            </p>
-        </div>
     </div>
 </body>
 </html>
